# PhotoId

./: .dockerignore  .gitignore  README.md  photoId-todo.md.txt  render.yaml  todo_simplified.txt
backend/: .dockerignore  Dockerfile  background_removal_test.py  debug_test.py  docker-compose.yml  env.example  face_detection_test.py  minimal_test.py  photoid_backend-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  run_server.py  setup.py  simple_test.py  start.sh  start_server.py  test_api.py  test_rate_limit.py  test_server.py
backend/app/: __init__.py  main.py  main_simple.py
backend/app/ai/: __init__.py  exceptions.py  processing.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  photos.py
backend/app/core/: config.py  rate_limiter.py
backend/tests/: test_error_handling.py  test_file_cleanup.py  test_file_validation.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: PhotoUploader.tsx
