[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[project]
name = "photoid-backend"
dynamic = ["version"]
description = "PhotoID AI Backend Application"
requires-python = ">=3.11,<3.13"
dependencies = []
authors = [{name = "PhotoID Team", email = "team@photoid.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = []